# H-AdminSim

./: .gitignore  README.md  pyproject.toml  run_vllm_docker.sh
asset/country/: address.json
asset/departments/: department.json  symptom.json
asset/prompts/: fhir_api_user.txt  fhir_resource_system.txt  fhir_resource_user.txt  intake_staff_task_user.txt  intake_supervisor_system.txt  intake_supervisor_user.txt  schedule_supervisor_user.txt  schedule_system.txt  schedule_task_user.txt  schedule_user.txt
config/: agent_simulate.yaml  agent_test.yaml  crud.yaml  data_synthesis.yaml
docker/: requirements.txt
docs/: 1_getting_started.md  2_fhir_crud.md  3_data_synthesis.md  4_agent_test.md  crud.md
legacy/: agent_test.py  department.json  department_system.txt  department_user.txt  fhir_api_system.txt  fhir_api_user.txt  llm_server.yaml  symptom.json
src/demo/: README.md
src/h_adminsim/: __init__.py  admin_staff.py  supervisor.py
src/h_adminsim/client/: google_client.py  openai_client.py  vllm_client.py
src/h_adminsim/environment/: __init__.py  hospital.py  op_scheduling_simulation.py
src/h_adminsim/pipeline/: __init__.py  data_generator.py  evaluator.py  simulation.py
src/h_adminsim/registry/: __init__.py  environment.py  errors.py  models.py  phrases.py  variables.py
src/h_adminsim/task/: agent_task.py  fhir_manager.py  schedule_assign.py
src/h_adminsim/tools/: __init__.py  agent_data_builder.py  data_converter.py  data_synthesizer.py  (+3 more)
src/registry/: environment.py  errors.py  models.py  pydantic_models.py  variables.py
src/run/: agent_simulate.py  agent_test.py  build_agent_data.py  convert_to_fhir.py  crud.py  e2e_pipeline.py  evaluate.py  synthesize_data.py
src/tasks/: __init__.py  agent_task.py  fhir_manager.py  schedule_assign.py
src/tools/: __init__.py  agent_data_builder.py  agent_test_builder.py  data_converter.py  data_synthesizer.py  evaluator.py  google_client.py  openai_client.py  vllm_client.py
src/utils/: common_utils.py  fhir_utils.py  filesys_utils.py  image_preprocess_utils.py  random_utils.py
(+14 files in other folders)
