[tool.poetry]
name = "h_adminsim"
version = "0.7.2"
description = "A Python package for simulating hospital administrative tasks."
authors = ["Jun-Min Lee <ljm56897@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [
    { include = "h_adminsim", from = "src" }
]
include = [
    { path = "src/h_adminsim/assets/fhir.schema.json", format = "sdist" },
    { path = "src/h_adminsim/assets/fhir.schema.json", format = "wheel" },
    { path = "src/h_adminsim/assets/prompts/*.txt", format = "sdist" },
    { path = "src/h_adminsim/assets/prompts/*.txt", format = "wheel" },
    { path = "src/h_adminsim/assets/names/*.txt", format = "sdist" },
    { path = "src/h_adminsim/assets/names/*.txt", format = "wheel" },
    { path = "src/h_adminsim/assets/departments/*.json", format = "sdist" },
    { path = "src/h_adminsim/assets/departments/*.json", format = "wheel" },
    { path = "src/h_adminsim/assets/country/*.json", format = "sdist" },
    { path = "src/h_adminsim/assets/country/*.json", format = "wheel" },
    { path = "src/h_adminsim/assets/configs/*.json", format = "sdist" },
    { path = "src/h_adminsim/assets/configs/*.json", format = "wheel" }
]

[tool.poetry.urls]
"Source" = "https://github.com/ljm565/H-AdminSim"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sconf = "0.2.5"
tqdm = "4.65.0"
transformers = ">=4.53.2,<=4.56.1"
peft = "0.14.0"
datasets = "2.16.1"
matplotlib = "3.10.3"
streamlit = "1.45.1"
streamlit-chat = "0.1.1"
aiohttp = "3.9.0"
fastapi = "0.115.12"
uvicorn = "0.34.3"
numpy = "1.26.4"
dotenv = "0.9.9"
google-genai = "1.19.0"
pillow = "11.2.1"
orjson = "3.10.18"
langchain = "0.3.27"
langchain-openai = "0.3.28"
langchain-google-genai = "2.1.8"
openai = ">=1.99.1,<=1.108.0"
vllm = "^0.10.2"
beautifulsoup4 = "4.13.5"
patientsim = "^1.0.0"

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
